# CRM-RAG

./: .env  .env.claude  .env.claude.example  .env.ollama  .env.ollama.example  .env.openai  .env.openai.example  .env.r1  .env.r1.example  .env.secrets.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  GREEK_LABELS_FIX.md  README.md  class_labels.json  config_loader.py  dataset_manager.py  dblp_aggregate_metrics.tsv  document_formatter.py  evaluation_report.md  extract_ontology_labels.py  fr_traversal.py  fundamental_relationships_cidoc_crm.json  graph_document_store.py  llm_providers.py  main.py  ontology_classes.json  property_labels.json  pyproject.toml  requirements.txt  universal_rag_system.py  universal_rag_system.py.bak
CRM+NETWORK+Extraction/: .gitignore  README.md  SYSTEMATIC_FUNCTION_ANALYSIS.md  UNUSED_FUNCTIONS_ANALYSIS.md  config_loader.py  extract_ontology_labels.py  graph_document_store.py  llm_providers.py  main.py  property_labels.json  test_ontology_classes.py  universal_rag_system.py
Data and ontology stores/: README.md  main.py  ontology_processor.py  rag_system.py
Simple_RAG/: documents_simple.pkl  llm_providers.py  main_simple.py  universal_rag_system_simple.py
benchmarks/: benchmark_document_generation.py
config/: .env.claude.example  .env.cluster  .env.local.example  .env.ollama.example  .env.openai.example  .env.r1.example  README.md  asinou_eval_questions_with_references.json  bk_interface.yaml  datasets.yaml  event_classes.json  fc_class_mapping.json  fr_enabled.json  fundamental_relationships_cidoc_crm.json  interface.yaml  prompts.yaml  (+2 more)
(+1685 files in other folders)
